--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import "./mixins/mixins";
-@import "./variables";
 @import "./reset";
+@import "./fonts";
+@import "./variables";
 @import "./container";
