--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -15,6 +15,11 @@
         line-height: 15px;
         color: map-get($colors, c5);
         text-decoration: none;
+        text-underline-offset: 1px;
+        cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
       }
       &:first-child {
         margin-left: 0px;
@@ -39,8 +44,13 @@
     .store {
       display: flex;
       align-items: center;
-      svg {
+      a {
+        display: flex;
         margin-left: 20px;
+        transition: 0.2s all;
+        &:hover {
+          transform: translateY(-2px);
+        }
         &:first-child {
           margin-left: 0px;
         }
