--- a/components/CardWrapper/CardWrapper.module.scss
+++ b/components/CardWrapper/CardWrapper.module.scss
@@ -1,6 +1,17 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  column-gap: 14px;
-  row-gap: 48px;
+  column-gap: 16px;
+  row-gap: 32px;
+  grid-template-columns: 1fr 1fr;
+
+  @include respond-above(sm) {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 48px;
+  }
+  @include respond-above(md) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+  @include respond-above(lg) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
