--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -6,19 +6,37 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 64px;
+    height: 54px;
+    @include respond-above(xs) {
+      height: 64px;
+    }
     h2 {
       font-weight: 600;
-      font-size: 33px;
-      line-height: 39px;
+      font-size: 16px;
+      line-height: 120%;
       color: map-get($colors, c6);
+      @include respond-above(xs) {
+        font-size: 24px;
+      }
+      @include respond-above(md) {
+        font-size: 33px;
+      }
     }
     .btn_wrapper {
       display: flex;
       align-items: center;
       & > button {
+        &:first-child {
+          display: none;
+          @include respond-above(xs) {
+            display: block;
+          }
+        }
         &:last-child {
-          margin-left: 24px;
+          margin-left: 16px;
+          @include respond-above(md) {
+            margin-left: 24px;
+          }
         }
       }
     }
@@ -30,11 +48,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 58px;
+  height: 46px;
+  @include respond-above(sm) {
+    height: 58px;
+  }
   h4 {
     font-weight: 600;
-    font-size: 24px;
+    font-size: 14px;
     line-height: 28px;
     color: map-get($colors, c6);
+    @include respond-above(sm) {
+      font-size: 20px;
+    }
+    @include respond-above(md) {
+      font-size: 24px;
+    }
   }
 }
