--- a/components/UI/SearchInput/SearchInput.module.scss
+++ b/components/UI/SearchInput/SearchInput.module.scss
@@ -2,20 +2,17 @@
   display: grid;
   grid-template-columns: 1fr 64px;
   align-items: center;
-  width: 432px;
+  width: auto;
   box-shadow: 0px 3px 10px rgb(0 0 0 / 18%);
+  @include respond-above(md) {
+    width: 432px;
+  }
   input {
     flex: 1;
   }
   button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100%;
-    padding: 0px;
-    border: none;
-    background: #017efe;
+    background: map-get($colors, c1);
     color: white;
-    cursor: pointer;
   }
 }
