--- a/components/UI/Select/Select.module.scss
+++ b/components/UI/Select/Select.module.scss
@@ -10,14 +10,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-width: 285px;
-    background: #ffffff;
+    width: 100%;
+    background: map-get($colors, c7);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.18);
     padding: 13px 16px 10px 16px;
     border: none;
     outline: none;
     &.placeholder {
-      color: #b4b4b4;
+      color: map-get($colors, c8);
+    }
+
+    @include respond-above(xs) {
+      width: 240px;
+    }
+    @include respond-above(md) {
+      width: 280px;
     }
   }
   div {
@@ -25,7 +32,7 @@
     left: 0px;
     top: 100%;
     right: 0px;
-    background: #ffffff;
+    background: map-get($colors, c7);
     box-shadow: 0px 3px 10px rgb(0 0 0 / 18%);
     z-index: 9;
     display: none;
@@ -38,11 +45,11 @@
           display: block;
           padding: 13px 16px 10px 16px;
           cursor: pointer;
-          color: #414141;
+          color: map-get($colors, c2);
           &.active,
           &:hover {
-            background: #017efe;
-            color: #ffffff;
+            background: map-get($colors, c1);
+            color: map-get($colors, c7);
             box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.18);
           }
         }
