--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -99,6 +99,14 @@
           width: auto !important;
         }
       }
+      a {
+        span {
+          @include respond-below(sm) {
+            width: 88px !important;
+            height: 26px !important;
+          }
+        }
+      }
     }
   }
 }
